binutils/arm-mips-src-20121018/sources/gcc/gcc/testsuite/gcc.dg/pr51020.c
/* PR 51020 */
/* { dg-do compile } */
/* { dg-options "---" } */
int main() {return 0;}
/* { dg-error "unrecognized.*'---'" ""  { target *-*-* } 0 } */
